--- a/ETL_function_test.ipynb
+++ b/ETL_function_test.ipynb
@@ -51,7 +51,11 @@
     "ratings_file = f'{file_dir}/ratings.csv'\n",
     "\n",
     "# 7. Set the three variables in Step 6 equal to the function created in Step 1.\n",
-    "kaggle_file, ratings_file, wiki_file = load_files()"
+    "kaggle_file, ratings_file, wiki_file = load_files()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
