--- a/ETL_clean_wiki_movies.ipynb
+++ b/ETL_clean_wiki_movies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 394,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 413,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,13 +84,12 @@
     "def extract_transform_load():\n",
     "    # Read in the kaggle metadata and MovieLens ratings CSV files as Pandas DataFrames.\n",
     "    kaggle_metadata = pd.read_csv(kaggle_file, low_memory=False)\n",
-    "    print('read kaggle')\n",
+    "    print('Read kaggle_file')\n",
     "    ratings = pd.read_csv(ratings_file)\n",
     "\n",
     "    # Open and read the Wikipedia data JSON file.\n",
     "    with open(wiki_file, mode='r') as file:\n",
-    "        wiki_movies_raw = json.load(file)\n",
-    "    \n",
+    "        wiki_movies_raw = json.load(file)  \n",
     "    \n",
     "    # 3. Write a list comprehension to filter out TV shows.\n",
     "        wiki_movies = [movie for movie in wiki_movies_raw\n",
@@ -103,7 +102,6 @@
     "    # and call the clean_movie function on each movie.\n",
     "    clean_movies = [clean_movie(movie) for movie in wiki_movies]\n",
     "    \n",
-    "\n",
     "    # 5. Read in the cleaned movies list from Step 4 as a DataFrame.\n",
     "    wiki_movies_df = pd.DataFrame(clean_movies)\n",
     "\n",
@@ -115,7 +113,7 @@
     "        wiki_movies_df.drop_duplicates(subset='imdb_id', inplace=True)\n",
     "        print(\"After duplicates removed:\", len(wiki_movies_df))\n",
     "    except TypeError:\n",
-    "        print(\"error occurred\")\n",
+    "        print(\"Error occurred\")\n",
     "\n",
     "    #  7. Write a list comprehension to keep the columns that don't have null values from the wiki_movies_df DataFrame.\n",
     "    wiki_columns_to_keep = [column for column in wiki_movies_df.columns if wiki_movies_df[column].isnull().sum() < len(wiki_movies_df) * 0.92]\n",
@@ -206,9 +204,6 @@
     "    \n",
     "    wiki_movies_df['release_date'] = pd.to_datetime(release_date.str.extract(f'({date_form_one}|{date_form_two}|{date_form_three}|{date_form_four})')[0], infer_datetime_format=True)\n",
     "    \n",
-    "    # Drop the old 'Release_date' column\n",
-    "    #wiki_movies_df.drop('Release date', axis=1, inplace=True)\n",
-    "    \n",
     "    \n",
     "    # 16. Clean the running time column in the wiki_movies_df DataFrame.\n",
     "    running_time = wiki_movies_df['Running time'].dropna().apply(lambda x: ' '.join(x) if type(x) == list else x)\n",
@@ -220,13 +215,13 @@
     "    wiki_movies_df.drop('Running time', axis=1, inplace=True)\n",
     "    \n",
     "    # Return three variables. The first is the wiki_movies_df DataFrame \n",
-    "    print(\"finished cleaning wiki_moves_df\")\n",
+    "    print(\"Finished cleaning wiki_movies_df\")\n",
     "    return wiki_movies_df, kaggle_metadata, ratings "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 414,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,18 +237,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 415,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "read kaggle\n",
+      "Read kaggle_file\n",
       "After link extract: 7076\n",
       "After duplicates removed: 7033\n",
       "No. of columns left: 21\n",
-      "finished cleaning wiki_moves_df\n"
+      "Finished cleaning wiki_movies_df\n"
      ]
     }
    ],
@@ -264,19 +259,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 19. Set the wiki_movies_df equal to the wiki_file variable. \n",
-    "wiki_movies_df = wiki_file\n",
-    "\n",
-    "#[[column,wiki_movies_df[column].isnull().sum()] for column in wiki_movies_df.columns]"
+    "wiki_movies_df = wiki_file\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 408,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +509,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 370,
+     "execution_count": 408,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 409,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +552,7 @@
        " 'running_time']"
       ]
      },
-     "execution_count": 372,
+     "execution_count": 409,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +573,7 @@
        "23"
       ]
      },
-     "execution_count": 376,
+     "execution_count": 410,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,45 +584,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['url', 0],\n",
-       " ['year', 0],\n",
-       " ['imdb_link', 0],\n",
-       " ['title', 1],\n",
-       " ['Based on', 4852],\n",
-       " ['Starring', 184],\n",
-       " ['Cinematography', 691],\n",
-       " ['Release date', 32],\n",
-       " ['Country', 236],\n",
-       " ['Language', 244],\n",
-       " ['Budget', 2295],\n",
-       " ['Director', 0],\n",
-       " ['Distributor', 357],\n",
-       " ['Editor(s)', 548],\n",
-       " ['Composer(s)', 518],\n",
-       " ['Producer(s)', 202],\n",
-       " ['Production company(s)', 1678],\n",
-       " ['Writer(s)', 199],\n",
-       " ['imdb_id', 0],\n",
-       " ['box_office', 1573],\n",
-       " ['budget', 2327],\n",
-       " ['release_date', 32],\n",
-       " ['running_time', 139]]"
-      ]
-     },
-     "execution_count": 377,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[[column,wiki_movies_df[column].isnull().sum()] for column in wiki_movies_df.columns]"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
