--- a/ETL_clean_kaggle_data.ipynb
+++ b/ETL_clean_kaggle_data.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
     "    \n",
     "\n",
     "    # Create a variable that will hold the non-null values from the “Box office” column.\n",
-    "    box_office = wiki_movies_df['Box office']\n",
+    "    box_office = wiki_movies_df['Box office'].dropna()\n",
     "    \n",
     "    # Convert the box office data created in Step 8 to string values using the lambda and join functions.\n",
     "    box_office = box_office.apply(lambda x: ' '.join(x) if type(x) == list else x)\n",
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
