--- a/ETL_clean_wiki_movies.ipynb
+++ b/ETL_clean_wiki_movies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 457,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 458,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 466,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
     "\n",
     "    \n",
     "    # 8. Create a variable that will hold the non-null values from the “Box office” column.\n",
-    "    box_office = wiki_movies_df['Box office']\n",
+    "    box_office = wiki_movies_df['Box office'].dropna()\n",
     "    \n",
     "    # 9. Convert the box office data created in Step 8 to string values using the lambda and join functions.\n",
     "    box_office = box_office.apply(lambda x: ' '.join(x) if type(x) == list else x)\n",
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 467,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 468,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 462,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 463,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 440,
+     "execution_count": 463,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 464,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
        " 'running_time']"
       ]
      },
-     "execution_count": 441,
+     "execution_count": 464,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": 465,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
        "23"
       ]
      },
-     "execution_count": 442,
+     "execution_count": 465,
      "metadata": {},
      "output_type": "execute_result"
     }
