--- a/ETL_function_test.ipynb
+++ b/ETL_function_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
     "# 1. Create a function that takes in three arguments;\n",
     "# Wikipedia data, Kaggle metadata, and MovieLens rating data (from Kaggle)\n",
     "\n",
-    "def load_files():\n",
+    "def load_files(kaggle_file, ratings_file, wiki_file):\n",
     "    # 2. Read in the kaggle metadata and MovieLens ratings CSV files as Pandas DataFrames.\n",
     "    kaggle_metadata = pd.read_csv(kaggle_file, low_memory=False)\n",
     "    ratings = pd.read_csv(ratings_file)\n",
@@ -39,7 +39,7 @@
     "    return kaggle_metadata, ratings, wiki_movies_df\n",
     "\n",
     "# 6 Create the path to your file directory and variables for the three files. \n",
-    "file_dir = file_dir = '/Users/YL/github/Movies-ETL/Resources/'\n",
+    "file_dir = file_dir = '/Users/YL/github/Movies-ETL/Data/'\n",
     "\n",
     "# Wikipedia data\n",
     "wiki_file = f'{file_dir}/wikipedia-movies.json'\n",
@@ -51,7 +51,7 @@
     "ratings_file = f'{file_dir}/ratings.csv'\n",
     "\n",
     "# 7. Set the three variables in Step 6 equal to the function created in Step 1.\n",
-    "kaggle_file, ratings_file, wiki_file = load_files()\n",
+    "kaggle_file, ratings_file, wiki_file = load_files(kaggle_file, ratings_file, wiki_file)\n",
     "\n",
     "\n",
     "\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
        "[5 rows x 193 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
        "[26024289 rows x 4 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
